--- a/trunk/faq/faq.html
+++ b/trunk/faq/faq.html
@@ -2,7 +2,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312"/>
 <style type="text/css"> /* <![CDATA[ */
   @import "branding/css/tigris.css";
   @import "branding/css/inst.css";
@@ -10,53 +10,40 @@
 <link rel="stylesheet" type="text/css" media="print"
   href="branding/css/print.css"/>
 <script type="text/javascript" src="branding/scripts/tigris.js"></script>
-<title>Subversion FAQ</title>
+<title>Subversion FAQ(常见问题列表)</title>
 </head>
 
 <body>
 <div class="app">
 
-<h1>Subversion FAQ</h1>
+<h1>Subversion FAQ(常见问题列表)</h1>
 
 
 <div class="h2"><!-- no 'id' or 'title' attribute for TOC -->
-<h2>Table of Contents</h2>
+<h2>问题列表</h2>
 
-<h4>General questions:</h4>
+<h4>常见问题：</h4>
 <ul>
-<li><a href="#why">Why does this project exist?</a></li>
-<li><a href="#collab">Is Subversion proprietary?  I heard that it
-    belongs to CollabNet.</a></li> 
-<li><a href="#stable">Is Subversion stable enough for me to use for my
-    own projects?</a></li>
-<li><a href="#interop">What is Subversion's client/server interoperability
-    policy?</a></li>
-<li><a href="#portability">What operating systems does Subversion run
-    on?</a></li> 
-<li><a href="#filesystem">What's all this about a new filesystem?  Is
-    it like ext2?</a></li> 
-<li><a href="#server-requirements">What kind of hardware do I need to run      
-    a Subversion server?</a></li>                                              
-<li><a href="#apache-extension">I heard that Subversion is an Apache
-    extension?  What does it use for servers?</a></li> 
-<li><a href="#need-apache">Does this mean I have to set up Apache to
-    use Subversion?</a></li> 
-<li><a href="#multiple-apachim">I run Apache 1.x right now, and can't
-    switch to Apache 2.0 just to serve Subversion repositories.
-    Does that mean I can't run a Subversion server?</a></li>  
+<li><a href="#why">这个项目为什么会存在？</a></li>
+<li><a href="#collab">Subversion是专有的吗?我听说它是属于CollabNet公司。</a></li> 
+<li><a href="#stable">Subversion如果用在我的项目上是否足够稳定？</a></li>
+<li><a href="#interop">Subversion的客户端/服务器协同工作的策略是怎样的呢？ </a></li>
+<li><a href="#portability">Subversion可以运行在哪些操作系统上呢？
+ </a></li> 
+<li><a href="#filesystem">所有它的一切是否是一种新的文件系统呢？比方说ext2文件系统？</a></li> 
+<li><a href="#server-requirements">为了运行一个Subversion服务器，哪种硬件是我所需要的？</a></li>                                              
+<li><a href="#apache-extension">我听说Subversion是Apache项目的扩展？我是否需要Apache来做服务器呢？</a></li> 
+<li><a href="#need-apache">是否意味着我必须首先安装Apache才能使用Subversion？</a></li> 
+<li><a href="#multiple-apachim">我现在所运行的是Apache 1.x，但是我不能仅仅为了支持Subversion版本库而将其转换成Apache 2.0。这是否意味着我不能使用Subversion服务器？</a></li>  
 <li><a href="#feature-x">Why don't you do X, just like SCM system Y?</a></li>
-<li><a href="#globalrev">Why does the entire repository share the 
-    same revision number? I want each of my projects to have their
-    own revision numbers.  </a></li>
-<li><a href="#changesets">Does Subversion have changesets?</a></li>
-<li><a href="#release">When's the next release?</a></li>
-<li><a href="#symlinks">Does Subversion support symlinks?</a></li>
-<li><a href="#logo">I need a high resolution version of the Subversion logo,
-    where can I get it?</a></li>
-<li><a href="#more-information">I have other questions.  Where can I
-    get more information?</a></li>  
-<li><a href="#moderation">Why isn't my post showing up on the mailing
-    list?</a></li>
+<li><a href="#globalrev">为什么全部的库都使用相同的版本号码？我想让我的每一个工程都有其自己的版本号码。</a></li>
+<li><a href="#changesets">Subversion有没有changesets?</a></li>
+<li><a href="#release">下一个版本什么时候发布？</a></li>
+<li><a href="#symlinks">Subversion是否支持symlinks呢？</a></li>
+<li><a href="#logo">我需要一个高分辨率的Subversion Logo,从哪里可以得到它呢？
+</a></li>
+<li><a href="#more-information">我还有些其他的问题，我从哪里可以得到更多的相关信息？</a></li>  
+<li><a href="#moderation">为什么我的邮件没有显示在邮件列表上呢？</a></li>
 </ul>
 
 <h4>How-to:</h4>
