--- a/trunk/faq/faq.html
+++ b/trunk/faq/faq.html
@@ -24,13 +24,13 @@
 
 <h4>常见问题：</h4>
 <ul>
-<li><a href="#why">这个项目为什么会存在？</a></li>
-<li><a href="#collab">Subversion是专有的吗?我听说它是属于CollabNet公司。</a></li> 
-<li><a href="#stable">Subversion如果用在我的项目上是否足够稳定？</a></li>
-<li><a href="#interop">Subversion的客户端/服务器协同工作的策略是怎样的呢？ </a></li>
-<li><a href="#portability">Subversion可以运行在哪些操作系统上呢？
+<li><a href="#why">为什么会有这样一个项目？</a></li>
+<li><a href="#collab">Subversion是专有软件吗?我听说它是属于CollabNet公司的。</a></li> 
+<li><a href="#stable">Subversion用在我的项目上是否足够稳定？</a></li>
+<li><a href="#interop">Subversion的客户端/服务器协同工作的策略是怎样的？ </a></li>
+<li><a href="#portability">Subversion可以运行在哪些操作系统上？
  </a></li> 
-<li><a href="#filesystem">所有它的一切是否是一种新的文件系统呢？比方说ext2文件系统？</a></li> 
+<li><a href="#filesystem">所有它的一切是否是一种新的文件系统？比方说ext2文件系统？</a></li> 
 <li><a href="#server-requirements">为了运行一个Subversion服务器，哪种硬件是我所需要的？</a></li>                                              
 <li><a href="#apache-extension">我听说Subversion是Apache项目的扩展？我是否需要Apache来做服务器呢？</a></li> 
 <li><a href="#need-apache">是否意味着我必须首先安装Apache才能使用Subversion？</a></li> 
@@ -43,7 +43,7 @@
 <li><a href="#logo">我需要一个高分辨率的Subversion Logo,从哪里可以得到它呢？
 </a></li>
 <li><a href="#more-information">我还有些其他的问题，我从哪里可以得到更多的相关信息？</a></li>  
-<li><a href="#moderation">为什么我的邮件没有显示在邮件列表上呢？</a></li>
+<li><a href="#moderation">为什么我的邮件没有显示在邮件列表上？</a></li>
 </ul>
 
 <h4>How-to:</h4>
@@ -275,42 +275,34 @@ a <tt>file:</tt> URL?</a></li>
 <hr/>
 
 <div class="h2" id="general-questions" title="general-questions">
-<h2>General questions:</h2>
+<h2>常见问题：</h2>
 
 
 <div class="h3" id="why" title="why">
-<h3>Why does this project exist?</h3>
+<h3>为什么会有这样一个项目？</h3>
 
-<p>To take over the CVS user base.  Specifically, we're writing a new
-version control system that is very similar to CVS, but fixes many
-things that are broken.  See our front page.</p>
+<p>为了接管CVS用户的基地.确切的说,我们写了一个新的版本控制系统，它和CVS很相似，但是它修正了以前CVS所没有解决的许多问题。请参见第一页.</p>
 
 </div>
 
 
 <div class="h3" id="collab" title="collab">
-<h3>Is Subversion proprietary?  I heard that it
-belongs to CollabNet.</h3>
+<h3>Subversion是专有软件的吗?我听说它是属于CollabNet公司的。</h3>
 
-<p>No, Subversion is open source / free software.  CollabNet pays the
-salaries of several full-time developers, and holds the copyright on
-the code, but that copyright is <a
-href="http://subversion.tigris.org/license-1.html">an
-Apache/BSD-style license</a>
-which is fully compliant with the <a
+<p>不是，Subversion一款开源/免费的软件。CollabNet公司为几个全职的开发人员支付薪水，并且拥有相关代码的版权，但是这个版权是<a
+href="http://subversion.tigris.org/license-1.html">一个
+Apache/BSD-风格的许可证明</a>
+它完全遵从于<a
 href="http://www.debian.org/social_contract#guidelines">Debian Free
-Software Guidelines</a>.  In other words, you are free to download,
-modify, and redistribute Subversion as you please; no permission from
-CollabNet or anyone else is required.</p>
+Software Guidelines</a>. 换句话说，你可以随心所欲的去下载，修改，或者重新发布新的版本，而不需要经过CollabNet公司或者其他任何一个人的许可。</p>
 
 </div>
 
 
 <div class="h3" id="stable" title="stable">
-<h3>Is Subversion stable enough for me to use for my
-own projects?</h3>
+<h3>Subversion用在我的项目上是否足够稳定？</h3>
 
-<p>Yes, absolutely.  It's ready for prime-time production.</p>
+<p>是的,绝对是这样的.  It's ready for prime-time production.</p>
 
 <p>Subversion has been in development since 2000, and became
 self-hosting after one year.  A year later when we declared "alpha",
