--- a/trunk/faq/faq.html
+++ b/trunk/faq/faq.html
@@ -302,18 +302,12 @@ Software Guidelines</a>. »»¾ä»°Ëµ£¬Äã¿ÉÒÔËæĞÄËùÓûµÄÈ¥ÏÂÔØ£¬ĞŞ¸Ä£¬»òÕßÖØĞÂ·¢²¼ĞÂµ
 <div class="h3" id="stable" title="stable">
 <h3>SubversionÓÃÔÚÎÒµÄÏîÄ¿ÉÏÊÇ·ñ×ã¹»ÎÈ¶¨£¿</h3>
 
-<p>ÊÇµÄ,¾ø¶ÔÊÇÕâÑùµÄ.  It's ready for prime-time production.</p>
+<p>ÊÇµÄ,¾ø¶ÔÊÇÕâÑùµÄ. ËüÒÑ¾­ÍêÈ«ÎªÒ»Ğ©¸´ÔÓµÄ(prime-time)Èí¼ş²úÆ·×öºÃÁË×¼±¸.</p>
 
-<p>Subversion has been in development since 2000, and became
-self-hosting after one year.  A year later when we declared "alpha",
-Subversion was already being used by dozens of private developers and
-shops for real work.  After that, it was two more years of bugfixing
-and stabilization until we reached 1.0.  Most other projects probably
-would have called the product "1.0" much earlier, but we deliberately
-decided to delay that label as long as possible.  We were aware that
-many people were waiting for a 1.0 before using Subversion, and had
-very specific expectations about the meaning of that label. So we
-stuck to that same standard.</p>
+<p>Subversion´Ó2000Äê¿ªÊ¼¿ª·¢£¬ÔÚÒ»ÄêÖ®ºó³ÉÎªÒ»¸ö×Ô×ãÖ´ĞĞ(self-hosting)µÄÏîÄ¿.µ±ÎÒÃÇ½«Æä³ÆÎª"alpha"°æ±¾µÄÊ±ºò,
+SubversionÒÑ¾­±»ºÜ¶àµÄ¸öÈË¿ª·¢ÈËÔ±ËùÊ¹ÓÃ£¬²¢ÇÒ
+shops for real work.ÔÚÄÇÖ®ºó£¬ÓĞÁ½Äê¶àµÄÊ±¼ä±»ÓÃÀ´½øĞĞBug×·×Ù(bugfixing)ºÍÔöÇ¿ÎÈ¶¨ĞÔ(stabilization)£¬Ö±µ½ÎÒÃÇ·¢²¼ÁË
+1.0°æ±¾.´ó¶àÊıµÄÆäËüÏîÄ¿¿ÉÄÜ¶¼»á°Ñ²úÆ·µÄ¡°1.0¡±°æ±¾½Ğ×öÔçÆÚ°æ±¾£¬µ«ÊÇÎÒÃÇ¹ÊÒâµÄ¾¡¿ÉÄÜ³¤µÄÍÆ³ÙÁËÕâ¸ö°æ±¾µÄ·¢²¼¡£ÎÒÃÇÒâÊ¶µ½ºÜ¶àÈËÔÚËûÃÇ×î³õÊ¹ÓÃÁËSubversionÖ®ºóÒ»Ö±ÔÚµÈ´ı1.0°æ±¾µÄ·¢²¼£¬²¢ÇÒ¶ÔÕâ¸öÒâÒå·Ç·²µÄ°æ±¾ÓĞ×ÅÌØ±ğµÄÆÚ´ı¡£ËùÒÔÎÒÃÇÔÚÕâÑùÒ»¸ö°æ±¾ÉÏÓÃÁËºÜ¶àµÄÊ±¼ä¶ø²»ÖÁÓÚÈÃËûÃÇÊ§Íû¡£</p>
 
 </div>
 
