--- a/faq/faq.html
+++ b/faq/faq.html
@@ -10,13 +10,13 @@
 <link rel="stylesheet" type="text/css" media="print"
   href="branding/css/print.css"/>
 <script type="text/javascript" src="branding/scripts/tigris.js"></script>
-<title>Subversion FAQ(常见问题列表)</title>
+<title>Subversion FAQ(常见问题解答)</title>
 </head>
 
 <body>
 <div class="app">
 
-<h1>Subversion FAQ(常见问题列表)</h1>
+<h1>Subversion FAQ(常见问题解答)</h1>
 
 
 <div class="h2"><!-- no 'id' or 'title' attribute for TOC -->
