--- a/trunk/svn/faq.html
+++ b/trunk/svn/faq.html
@@ -339,18 +339,9 @@ side)是相同的,除非是在Berkeley DB的Win9x(Win95/Win98/WinME)作为平台的主机上,因为
 
 
 <div class="h3" id="filesystem" title="filesystem">
-<h3>What's all this about a new filesystem?  Is
-it like ext2?</h3>
+<h3>所有它的一切是否是一种新的文件系统？比方说ext2文件系统？</h3>
 
-<p>No.  The "Subversion Filesystem" is not a kernel-level filesystem
-that one would install in an operating system.  Instead, it is
-Subversion's repository interface, which is a "versioned filesystem"
-in the sense that it stores a directory tree whose state is remembered
-from revision to revision.  Writing programs to access the repository
-is similar to writing programs that use other filesystem APIs.  The
-main difference is that this particular filesystem doesn't lose data
-when written to; old tree states can be retrieved as easily the most
-recent state.</p>
+<p>不是。"Subversion文件系统"不是一个可以装在操作系统上的内核级的文件系统，相反，它是Subversion版本库的接口，是一个版本文件系统，在某种意义上说，它可以存储一个文件目录结构（树）并且使这个目录结构从一个修订版本到下一个修订版本的过程中保留版本信息。访问这个版本库来编写程序和使用其他文件系统的API是很相似的，但是最大的不同在于，这个特殊的文件系统在你写入的时候不会丢失数据。目录结构(树)的一些旧的状态信息可以被很容易的恢复，就像恢复到最近的状态那样容易。</p>
 
 </div>
 
