--- a/svn/hacking.html
+++ b/svn/hacking.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -9,17 +9,16 @@
   /* ]]> */</style>
 <link rel="stylesheet" type="text/css" media="print"
   href="branding/css/print.css" />
-<script type="text/javascript" src="branding/scripts/tigris.js"></script>
-<title>Hacker's Guide to Subversion</title>
+<title>Subversion开发入门</title>
 </head>
 
 <body>
 <div class="app">
 
-<h1 style="text-align: center;">Hacker's Guide to Subversion</h1>
+<h1 style="text-align: center;">Subversion开发入门n</h1>
 
-<p>If you are contributing code to the Subversion project, please read
-this first.</p>
+<p>如果你想给Subversion工程贡献代码, 请首先阅读本文档.</p>
+<p>翻译者:litzhang sdl@yunchengonline.com</p>
 
 <pre>
 $LastChangedDate: 2008-06-10 10:56:53 +0800 (星期二, 10 六月 2008) $
@@ -31,40 +30,40 @@ $LastChangedDate: 2008-06-10 10:56:53 +0800 (星期二, 10 六月 2008) $
      sections and therefore it's confusing when it looks the same as
      the others. -->
 <div class="h1"><!-- no 'id' or 'title' attribute for ToC -->
-<h1>Table of Contents</h1>
+<h1>内容列表</h1>
 
 <ul>
-<li><a href="#participating">Participating in the community</a></li>
-<li><a href="#docs">Theory and documentation</a></li>
-<li><a href="#code-to-read">Code to read</a></li>
-<li><a href="#directory-layout">Directory layout</a></li>
-<li><a href="#coding-style">Coding style</a></li>
-<li><a href="#secure-coding">Secure coding guidelines</a></li>
-<li><a href="#destruction-of-stacked-resources">Destruction of stacked resources</a></li>
-<li><a href="#documenting">Documentation</a></li>
-<li><a href="#use-page-breaks">Using page breaks</a></li>
-<li><a href="#error-messages">Error message conventions</a></li>
-<li><a href="#other-conventions">Other conventions</a></li>
-<li><a href="#apr-pools">APR pool usage conventions</a></li>
-<li><a href="#apr-status-codes">APR status codes</a></li>
-<li><a href="#exception-handling">Exception handling</a></li>
-<li><a href="#automated-tests">Automated tests</a></li>
-<li><a href="#write-test-cases-first">Writing test cases before code</a></li>
-<li><a href="#server-debugging">Debugging the server</a></li>
-<li><a href="#tracing-memory-leaks">Tracking down memory leaks</a></li>
-<li><a href="#log-messages">Writing log messages</a></li>
-<li><a href="#crediting">Crediting</a></li>
-<li><a href="#patches">Patch submission guidelines</a></li>
-<li><a href="#filing-issues">Filing bugs / issues</a></li>
-<li><a href="#issue-triage">Issue triage</a></li>
-<li><a href="#commit-access">Commit access</a></li>
-<li><a href="#lightweight-branches">Use lightweight branches</a></li>
-<li><a href="#configury">The configuration/build system under unix</a></li>
-<li><a href="#releasing">How to release a distribution tarball</a></li>
-<li><a href="#release-numbering">Release numbering, compatibility, and deprecation</a></li>
-<li><a href="#release-stabilization">Stabilizing and maintaining releases</a></li>
-<li><a href="#tarball-signing">Signing source distribution packages</a></li>
-<li><a href="#l10n">Localization (l10n)</a></li>
+<li><a href="#participating">参与社区</a></li>
+<li><a href="#docs">原理和文档</a></li>
+<li><a href="#code-to-read">如何读代码</a></li>
+<li><a href="#directory-layout">目录布局</a></li>
+<li><a href="#coding-style">代码风格</a></li>
+<li><a href="#secure-coding">安全的编码准则</a></li>
+<li><a href="#destruction-of-stacked-resources">堆栈资源的销毁</a></li>
+<li><a href="#documenting">程序注释</a></li>
+<li><a href="#use-page-breaks">使用分页符</a></li>
+<li><a href="#error-messages">错误信息约定</a></li>
+<li><a href="#other-conventions">其他约定</a></li>
+<li><a href="#apr-pools">APR池用法约定</a></li>
+<li><a href="#apr-status-codes">APR返回状态码</a></li>
+<li><a href="#exception-handling">异常处理</a></li>
+<li><a href="#automated-tests">自动测试</a></li>
+<li><a href="#write-test-cases-first">在编码前写测试用例</a></li>
+<li><a href="#server-debugging">调试服务器</a></li>
+<li><a href="#tracing-memory-leaks">跟踪内存泄露</a></li>
+<li><a href="#log-messages">写日志信息</a></li>
+<li><a href="#crediting">记录贡献者信息</a></li>
+<li><a href="#patches">补丁提交指导方针</a></li>
+<li><a href="#filing-issues">填写bugs / issues</a></li>
+<li><a href="#issue-triage">填写bugs / issues</a></li>
+<li><a href="#commit-access">提交权限</a></li>
+<li><a href="#lightweight-branches">使用轻量级分支</a></li>
+<li><a href="#configury">在unix下配置和构建代码</a></li>
+<li><a href="#releasing">如何释出一个分发包</a></li>
+<li><a href="#release-numbering">发布版本编号，及兼容性和反对点Release numbering, compatibility, and deprecation</a></li>
+<li><a href="#release-stabilization">稳定性处理何管理发布包</a></li>
+<li><a href="#tarball-signing">签署源代码发布的软件包</a></li>
+<li><a href="#l10n">本地化 (l10n)</a></li>
 </ul>
 
 </div>
